@startuml
!define table(x) entity x << (T,#FFAAAA) >>
!define primary_key(x) <b><color:red>x</color></b>
!define foreign_key(x) <color:blue>x</color>

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam ranksep 80
skinparam nodesep 60
skinparam entityFontSize 10
skinparam entityFontStyle bold
skinparam entityBackgroundColor #FEFECE
skinparam entityBorderColor #A80036

' ============================================
' TABLAS PRINCIPALES (Core)
' ============================================
entity "sexs" as sexs {
  * id : INT
  --
  name : VARCHAR(45)
}

entity "document_types" as doc_types {
  * id : INT
  --
  name : VARCHAR(20)
}

entity "departments" as depts {
  * id : INT
  --
  name : VARCHAR(45)
}

entity "provinces" as provs {
  * id : INT
  --
  name : VARCHAR(45)
  department_id : INT
}

entity "districts" as dists {
  * id : INT
  --
  name : VARCHAR(45)
  province_id : INT
}

entity "persons" as persons {
  * id : INT
  --
  names : VARCHAR(45)
  lastNames : VARCHAR(45)
  documentNumber : VARCHAR(12)
  imageUrl : VARCHAR(70)
  birthDate : DATE
  created : DATETIME
  updated : DATETIME
  sex_id : INT
  document_type_id : INT
}

entity "phones" as phones {
  * id : INT
  --
  person_id : INT
  description : VARCHAR(40)
  phone : VARCHAR(20)
}

entity "addresses" as addresses {
  * id : INT
  --
  person_id : INT
  district_id : INT
  description : VARCHAR(40)
  address : VARCHAR(255)
}

' ============================================
' ROLES DE PERSONAS
' ============================================
entity "workers" as workers {
  * id : INT
  --
  code : INT
  bio : TEXT
  email : VARCHAR(100)
  user_id : INT
  person_id : INT
}

entity "students" as students {
  * id : INT
  --
  code : INT
  email : VARCHAR(100)
  user_id : INT
  person_id : INT
}

entity "representatives" as reps {
  * id : INT
  --
  email : VARCHAR(100)
  user_id : INT
  person_id : INT
}

entity "representative_roles" as rep_roles {
  * id : INT
  --
  name : VARCHAR(20)
}

entity "representatives_students_roles" as rep_stud_roles {
  * id : INT
  --
  representative_id : INT
  student_id : INT
  representative_role_id : INT
  created : DATETIME
  updated : DATETIME
}

' ============================================
' ACADÉMICO
' ============================================
entity "levels" as levels {
  * id : INT
  --
  name : VARCHAR(30)
}

entity "course_branches" as course_branches {
  * id : INT
  --
  name : VARCHAR(30)
}

entity "courses" as courses {
  * id : INT
  --
  name : VARCHAR(45)
  code : VARCHAR(10)
  description : TEXT
  sylabus_url : VARCHAR(100)
  level_id : INT
  branch_id : INT
  worker_id : INT
}

entity "sections" as sections {
  * id : INT
  --
  name : VARCHAR(45)
  description : TEXT
  image_url : VARCHAR(100)
  course_id : INT
}

entity "worker_roles" as worker_roles {
  * id : INT
  --
  name : VARCHAR(20)
}

entity "sections_workers_roles" as sec_workers_roles {
  * id : INT
  --
  section_id : INT
  worker_id : INT
  worker_role_id : INT
}

entity "sections_students" as sec_students {
  * id : INT
  --
  section_id : INT
  student_id : INT
}

' ============================================
' MATERIALES Y DOCUMENTOS
' ============================================
entity "folders" as folders {
  + id : INT
  --
  parent_id : INT
  title : VARCHAR(100)
  description : TEXT
  created : DATETIME
  updated : DATETIME
}

entity "folder_common_materials" as folder_common {
  + id : INT
  --
  course_id : INT
}

entity "folder_section_materials" as folder_section {
  + id : INT
  --
  section_id : INT
}

entity "documents" as documents {
  + id : INT
  --
  folder_id : INT
  title : VARCHAR(100)
  autogenerated_title : TEXT
  url : VARCHAR(255)
  uploaded_by : INT
  created : DATETIME
  updated : DATETIME
}

entity "material_documents" as mat_docs {
  * id : INT
  --
  material_id : INT
  document_id : INT
}

' ============================================
' EVALUACIONES
' ============================================
entity "evaluation_types" as eval_types {
  * id : INT
  --
  name : VARCHAR(50)
  icon : VARCHAR(15)
}

entity "section_evaluations" as sec_evals {
  * id : INT
  --
  section_id : INT
  worker_id : INT
  evaluation_type_id : INT
  title : VARCHAR(100)
  description : TEXT
  published_from : DATETIME
  published_to : DATETIME
  created : DATETIME
  updated : DATETIME
}

entity "evaluation_documents" as eval_docs {
  * id : INT
  --
  section_evaluation_id : INT
  document_id : INT
}

entity "section_evaluation_grades" as eval_grades {
  * id : INT
  --
  section_evaluation_id : INT
  student_id : INT
  grade : DECIMAL(5,2)
  feedback : TEXT
  created : DATETIME
  updated : DATETIME
}

entity "section_evaluation_submissions" as eval_submissions {
  * id : INT
  --
  section_evaluation_id : INT
  student_id : INT
  created : DATETIME
  updated : DATETIME
}

entity "submission_documents" as sub_docs {
  * id : INT
  --
  comment : TEXT
  submission_id : INT
  document_id : INT
}

' ============================================
' PUBLICIDAD
' ============================================
entity "adverts" as adverts {
  * id : INT
  --
  header : VARCHAR(45)
  description : TEXT
  created : DATETIME
  updated : DATETIME
  published_from : DATETIME
  published_to : DATETIME
  visible : BOOLEAN
  section_id : INT
  worker_id : INT
}

' ============================================
' RELACIONES (Agrupadas por contexto)
' ============================================

' --- Personas ---
sexs ||--o{ persons
doc_types ||--o{ persons
persons ||--o{ phones
persons ||--o{ addresses
persons ||--|| workers
persons ||--|| students
persons ||--|| reps

' --- Ubicación ---
depts ||--o{ provs
provs ||--o{ dists
dists ||--o{ addresses

' --- Representantes ---
reps ||--o{ rep_stud_roles
rep_roles ||--o{ rep_stud_roles
students ||--o{ rep_stud_roles

' --- Académico ---
levels ||--o{ courses
course_branches ||--o{ courses
workers ||--o{ courses
courses ||--o{ sections

sections ||--o{ sec_workers_roles
workers ||--o{ sec_workers_roles
worker_roles ||--o{ sec_workers_roles

sections ||--o{ sec_students
students ||--o{ sec_students

' --- Folders y Documentos ---
folders ||--o{ folders : parent_id
folders ||--o{ documents
folder_common -|> folders
folder_section -|> folders
folder_common }o--|| courses
folder_section }o--|| sections

' --- Evaluaciones ---
sections ||--o{ sec_evals
workers ||--o{ sec_evals
eval_types ||--o{ sec_evals

sec_evals ||--o{ eval_docs
documents ||--o{ eval_docs

sec_evals ||--o{ eval_grades
students ||--o{ eval_grades

sec_evals ||--o{ eval_submissions
students ||--o{ eval_submissions

eval_submissions ||--o{ sub_docs
documents ||--o{ sub_docs

' --- Publicidad ---
sections ||--o{ adverts
workers ||--o{ adverts

@enduml